<resources>
    <string name="app_name">GustoGuru</string>
    <string name="Welcom">Welcome to GustoGuru!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="in">Let’s Munch In!</string>
    <string name="register">No account yet? Register 🍕</string>
    <string name="join">Join the Feast 🎉</string>
    <string name="name">Full Name</string>
    <string name="joining">Join the GustoGang!</string>
    <string name="facebook_app_id">1051192483541674</string>
    <string name="fb_login_protocol_scheme">fb1051192483541674</string>
    <string name="client_id">537371555728-hh24b9mntr4tabq9vmilp1se4vnldg1j.apps.googleusercontent.com</string>
    <string name="facebook_client_token">37adc666f4398bc69c4d950bc7a117a3</string>
    <string name="default_web_client_id">your_web_client_id_here</string>
    <string name="login">Or Login with</string>
    <string name="haveaccount">Already have an account?</string>
    <string name="loginn">Login</string>
    <string name="slogin">Plan meals like a Guru, cook with Gusto!\"</string>
    <string name="slogen2">Discover. Cook. Enjoy. Repeat.</string>
    <string name="meal_image">Meal Image</string>
    <string name="featured_meals">Featured Meals 👇</string>
    <string name="categories">Categories 🍱</string>
    <string name="meal_of_the_day">🌟 Meal of the Day</string>
    <string name="search_meals">Search meals...</string>
    <string name="hey_chef">Hey Chef %s! 👩‍🍳</string>
    <string name="meal_image_desc">Image of the meal</string>
    <string name="youtube_video_desc">YouTube video tutorial</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="ingredient_image">Ingredient image</string>
    <string name="meal_added_to_planner">Meal added to planner for %1$s</string>
    <string name="calendar_event_title">Meal: %1$s</string>
    <string name="added_to_device_calendar">Added to device calendar</string>

    <string name="no_favorites">No favorite meals yet</string>
    <string name="action_remove_favorite">Remove from favorites</string>

    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="planner">Planner</string>
    <string name="no_planned_meals">No planned meals found</string>

    <string name="search">Search</string>
    <string name="edit_name">Edit name</string>
    <string name="edit_your_name">Edit your name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="save">Save</string>
    <string name="back_button">Back</string>
    <string name="logout">Log out</string>

    <string name="skip">Skip</string>

    <string name="remove_meal">Remove meal</string>
</resources>